# antennapattern

./: CMakeLists.txt  MANIFEST.md
cmake/Modules/: antennapatternConfig.cmake
docs/: README.antennapattern
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  antennapattern_antenna_angle_tagger.xml  antennapattern_artificial_angle_tagger.xml  antennapattern_pattern_plot_sink_f.xml  antennapattern_pattern_sink_f.xml  antennapattern_powerestimation_cf.xml
include/antennapattern/: CMakeLists.txt  antenna_angle_tagger.h  api.h  artificial_angle_tagger.h  pattern_plot_sink_f.h  pattern_sink_f.h  powerestimation_cf.h
lib/: CMakeLists.txt  antenna_angle_tagger_impl.cc  antenna_angle_tagger_impl.h  artificial_angle_tagger_impl.cc  artificial_angle_tagger_impl.h  pattern_plot_sink_f_impl.cc  pattern_plot_sink_f_impl.h  pattern_sink_f_impl.cc  pattern_sink_f_impl.h  polar_diagram_widget.h  powerestimation_cf_impl.cc  powerestimation_cf_impl.h  qa_antennapattern.cc  qa_antennapattern.h  test_antennapattern.cc
python/: CMakeLists.txt  __init__.py  qa_artificial_angle_tagger.py  qa_powerestimation_cf.py
swig/: CMakeLists.txt  antennapattern_swig.i
